# wildfire-detection

./: .gitignore  README.md  data_explorer.py  data_loader.py  main.py  notebook_nabil.ipynb  notebook_samy.ipynb  notebook_train_samy.ipynb  pipeline.py  pyproject.toml
dataset/: data.yaml
dataset/labels/test/: cl6b03sa00004l4555k7m3d9h_2_FALSE_COLOR_jpg.rf.ff06f8d5665b3485544ff4b57022f5a4.txt  cl6b5dfkd003fl455d1yufkce_2_FALSE_COLOR_jpg.rf.d4fff2ca1272f4fb2f0c9cb2ef9a4e41.txt  cl6b5qhgi004ml4554fwj59ku_2_FALSE_COLOR_jpg.rf.f2becfdadd89f46560f6e995b220149f.txt  cl6b5s1n0004ul455es9i793w_1_TRUE_COLOR_jpg.rf.b4047203715e6e814acf94b0932d8906.txt  cl6b65ksg0069l455f4od44cb_1_TRUE_COLOR_jpg.rf.3e54d168c45f2d0c7a3f5a70b8e92e20.txt  cl6b67dvg006dl455cgxl9kq8_6_SWIR_jpg.rf.128b5aecb2220f2fa5c185b9e54bd0fb.txt  cl6b6gdyh0079l4555ka0g84o_1_TRUE_COLOR_jpg.rf.1b70be6a6e92d72b441c4e5bff1f6b4d.txt  cl6b6h5fo007bl455669md4vp_1_TRUE_COLOR_jpg.rf.2a3317b1042bda5ae825c7683a9d65bb.txt  cl6b6h5fo007bl455669md4vp_4_FALSE_COLOR__URBAN_jpg.rf.422f3c9e4caef71972de10acb5065019.txt  cl6b6l171007kl4552zfu0hh5_1_TRUE_COLOR_jpg.rf.742cc3d06e92c2bf297ec516c01f0937.txt  cl6b6op7a007ol455fvvv6g4a_6_SWIR_jpg.rf.4926076997caf8669df1f851efeae7e6.txt  cl6b6pieh007rl455fwvb73gr_1_TRUE_COLOR_jpg.rf.8f3f9c84272e40682f7f430cdc4ac4c0.txt  (+35 more)
prepare_data/: data_cleaner.py  data_explorer.py  data_loader.py  data_preparation.py
tests/: test_data_cleaner.py  test_data_explorer.py
tests/prepare.data/: test_data_explorer.py  test_data_loader.py  test_math_operations.py
(+443 files in other folders)
